prost-unwrap-proto-tests/tests/ui/with_this_mod_non_absolute.stderr
error: Parameter argument must be an absolute module path literal, e.g. `crate::proto`
  --> tests/ui/with_this_mod_non_absolute.rs:11:20
   |
11 |     .with_this_mod(test)
   |                    ^^^^
